objects/SLSI__Intranet_Event__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SLSI__Date_of_Event__c</fullName>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLSI__End_Date__c</fullName>
        <description>This is to be used if envent spans more than one day.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLSI__Event_Type__c</fullName>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Meeting - Dover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Meeting - Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLSI__For_All_Departments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For All Departments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__For_All_Offices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For All Offices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__Intranet_Event_Departments__c</fullName>
        <label>Intranet Event Departments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Intranet_Event_Offices__c</fullName>
        <label>Intranet Event Offices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Select_Departments__c</fullName>
        <formula>IF( SLSI__For_All_Departments__c , 'Notifications can only be published to particular departments if they are not intended to all departments i.e. for All Departments field is unchecked.', HYPERLINK('apex/SLSI__SL_IntranetDepartmentLookup?id='+ Id , 'Click to select departments' , '_self') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Departments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Select_Offices__c</fullName>
        <formula>IF( SLSI__For_All_Offices__c , 'Notifications can only be published to particular offices if they are not intended to all offices i.e. for All Offices field is unchecked.', HYPERLINK('apex/SLSI__SL_IntranetOfficeLookup?id='+ Id , 'Click to select offices' , '_self') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Offices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Selected_Department_Ids__c</fullName>
        <label>Selected Department Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Selected_Offices_Ids__c</fullName>
        <label>Selected Offices Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Venue__c</fullName>
        <description>Place where event was held</description>
        <label>Venue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Intranet Event</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <columns>NAME</columns>
        <columns>SLSI__Venue__c</columns>
        <columns>SLSI__Date_of_Event__c</columns>
        <columns>SLSI__End_Date__c</columns>
        <columns>SLSI__Comments__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLSI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intranet Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Events</pluralLabel>
    <recordTypes>
        <fullName>SLSI__Company_Events</fullName>
        <active>true</active>
        <description>Company Events</description>
        <label>Company Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLSI__Conferences</fullName>
        <active>true</active>
        <description>Conferences</description>
        <label>Conferences</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLSI__Holidays</fullName>
        <active>true</active>
        <description>Holidays</description>
        <label>Holidays</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>